[package]
name = "aoc11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="aoc11"
path="src/aoc11.rs"

[[bench]]
name="aoc11"
path="benches/aoc11.rs"
harness = false

[features]
dhat-heap = []

[dependencies]
divan = {workspace=true}
dhat = {workspace=true}
tracing.workspace = true
tracing-subscriber = { workspace = true }
nom.workspace = true
itertools.workspace = true
nom-supreme = "0.8.0"
test-log.workspace = true
tracing-log = "0.2.0"
nom_locate = "4.2.0"

[dev-dependencies]
itertools = {workspace=true}
env_logger= "*"
