[package]
name = "aoc13"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="aoc13"
path="src/aoc13.rs"

[[bench]]
name="aoc13"
path="benches/aoc13.rs"
harness = false

[features]
dhat-heap = []

[dependencies]
divan = {workspace=true}
dhat = {workspace=true}
tracing.workspace = true
tracing-subscriber.workspace = true
nom.workspace = true
nom-supreme = "0.8.0"
ndarray = "0.15.6"
test-log = "0.2.14"

[dev-dependencies]
itertools = {workspace=true}
