[package]
name = "aoc14"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="aoc14"
path="src/aoc14.rs"

[[bench]]
name="aoc14"
path="benches/aoc14.rs"
harness = false

[features]
dhat-heap = []

[dependencies]
divan = {workspace=true}
dhat = {workspace=true}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
itertools = {workspace=true}
