[package]
name = "aoc15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="aoc15"
path="src/aoc15.rs"

[[bench]]
name="aoc15"
path="benches/aoc15.rs"
harness = false

[features]
dhat-heap = []

[dependencies]
divan = {workspace=true}
dhat = {workspace=true}
tracing = { workspace = true }
tracing-subscriber.workspace = true
test-log = { version = "0.2.14", features = ["log", "trace"] }
trace = "0.1.7"

[dev-dependencies]
itertools = {workspace=true}
