[package]
name = "aoc16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="aoc16"
path="src/aoc16.rs"

[[bench]]
name="aoc16"
path="benches/aoc16.rs"
harness = false

[features]
dhat-heap = []

[dependencies]
divan = {workspace=true}
dhat = {workspace=true}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nom.workspace = true
nom-supreme = "0.8.0"
nom_locate = "4.2.0"
itertools.workspace = true
test-log = { version = "0.2.14", features = ["log", "trace"] }
rayon.workspace = true

[dev-dependencies]
itertools = {workspace=true}
