[package]
name = "aoc19"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="aoc19"
path="src/aoc19.rs"

[[bench]]
name="aoc19"
path="benches/aoc19.rs"
harness = false

[features]
dhat-heap = []

[dependencies]
divan = {workspace=true}
dhat = {workspace=true}
tracing = { workspace = true }
tracing-subscriber.workspace = true
nom.workspace = true
nom-supreme = "0.8.0"
nom_locate = "4.2.0"
trace = "0.1.7"
rstest.workspace = true

[dev-dependencies]
itertools = {workspace=true}
