[package]
name = "aoc2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="aoc2"
path="src/aoc2.rs"

[[bench]]
name="aoc2"
path="benches/aoc2.rs"
harness = false

[profile.release]
debug = 1

[features]
dhat-heap = []

[dependencies]
divan = {workspace=true}
dhat = {workspace=true}

[dev-dependencies]
itertools = {workspace=true}
