[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="aoc22"
path="src/aoc22.rs"

[[bin]]
name="visualize"
path="src/visualize.rs"

[[bench]]
name="aoc22"
path="benches/aoc22.rs"
harness = false

[features]
dhat-heap = []
fps = []

[profile.dev.package."*"]
opt-level = 3

[dependencies]
divan = {workspace=true}
dhat = {workspace=true}
tracing = { workspace = true }
tracing-subscriber.workspace = true
glam.workspace = true
nom.workspace = true
nom-supreme = "0.8.0"
nom_locate = "4.2.0"
trace = "0.1.7"
test-log = { version = "0.2.14", features = ["log", "trace"] }
petgraph.workspace = true
bevy = "0.12.1"
bevy-inspector-egui = "0.21.0"

[dev-dependencies]
itertools = {workspace=true}
