[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="aoc23"
path="src/aoc23.rs"

[[bench]]
name="aoc23"
path="benches/aoc23.rs"
harness = false

[features]
dhat-heap = []

[dependencies]
divan = {workspace=true}
dhat = {workspace=true}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ndarray = "0.15.6"
pathfinding = "4.8.0"

[dev-dependencies]
itertools = {workspace=true}
