[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="aoc24"
path="src/aoc24.rs"

[[bench]]
name="aoc24"
path="benches/aoc24.rs"
harness = false

[features]
dhat-heap = []

[dependencies]
divan = {workspace=true}
dhat = {workspace=true}
tracing = { workspace = true }
tracing-subscriber.workspace = true
trace = "0.1.7"
test-log = { version = "0.2.14", features = ["log", "trace"] }
nom.workspace = true
nom-supreme = "0.8.0"
nom_locate = "4.2.0"

[dev-dependencies]
itertools = {workspace=true}
