[package]
name = "aoc25"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="aoc25"
path="src/aoc25.rs"

[[bench]]
name="aoc25"
path="benches/aoc25.rs"
harness = false

[features]
dhat-heap = []

[dependencies]
divan = {workspace=true}
dhat = {workspace=true}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
petgraph.workspace = true
bimap = "0.6.3"
itertools.workspace = true
rand = "0.8.5"
rayon.workspace = true
indicatif = { version = "0.17.7", features = ["rayon"] }

[dev-dependencies]
itertools = {workspace=true}
