[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc"
path = "src/bin/main.rs"

[[bench]]
name = "day-02"
path = "benches/benchmarks.rs"
harness = false

[profile.release]
debug = 1

[features]
dhat-heap = []

[lib]

[dependencies]
divan = "*"
dhat = "*"
# these are not really used, however may be useful in the 
# future as I am learning
miette = "*"
nom = "*"

[dev-dependencies]
itertools = "*"
